--- a/templates/users/edit_profile.html
+++ b/templates/users/edit_profile.html
@@ -1,18 +1,35 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Edit Profile</title>
-</head>
-<body>
+{% extends "users/sidebar_base.html" %}
+{% block content %}
+<div class="card shadow-sm p-4">
+  <h3 class="mb-4">Edit Profile</h3>
 
-<h2>Edit Profile</h2>
-
-<form method="POST" enctype="multipart/form-data">
+  <form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
-    {{ form.as_p }}
 
-    <button type="submit">Save</button>
-</form>
+    <div class="mb-3">
+      <label class="form-label">Bio</label>
+      {{ form.bio }}
+    </div>
 
-</body>
-</html>
+    <div class="mb-3">
+      <label class="form-label">Upload Avatar</label>
+      {{ form.avatar }}
+      <div class="form-text">
+        PNG/JPG or choose a default avatar <a href="{% url 'users:choose_avatar' %}">here</a>.
+      </div>
+    </div>
+
+    <div class="mb-3">
+      <label class="form-label">Emergency Contact Name</label>
+      {{ form.emergency_name }}
+    </div>
+
+    <div class="mb-3">
+      <label class="form-label">Emergency Contact Phone</label>
+      {{ form.emergency_phone  }}
+    </div>
+
+    <button class="btn btn-primary">Save</button>
+  </form>
+</div>
+{% endblock %}
